# pydataease

./: .gitignore  .typos.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.nginx  README.md  SECURITY.md  build-release.sh  docker-compose.prod.yml  getTables-response.json  install.sh  start.sh  status.sh  stop.sh  uninstall.sh  upgrade.sh
core/pydataease-backend/: .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  pyrightconfig.json
core/pydataease-backend/alembic/: env.py
core/pydataease-backend/alembic/versions/: 17d82096d309_add_core_embed_config_table.py  36d43ebe125d_add_core_auth_provider_table.py  40bf4ea58e3d_add_user_auth_link_table.py  69eb0d5df3f8_add_core_user_table.py  7aafbb0a9ea0_add_data_filing_tables.py  89fe32e99ed7_add_menu_entries_for_frontend_pages.py  8c54f4f57d7a_add_sys_variable_and_sys_variable_value_.py  9fabd277b7b0_initial_schema.py  a1b2c3d4e5f6_seed_core_menu.py  a1b2c3d4e5f7_add_background_subject_tables.py  a1b2c3d4e5f8_add_watermark_menu_entry.py  a1b2c3d4e5f9_update_menu_icons.py  a2b3c4d5e6f7_add_link_jump_tables.py  a3b4c5d6e7f8_add_permission_tables.py  b1c2d3e4f5a0_add_my_filing_menu_entry.py  b2c3d4e5f6a8_add_log_apikey_tables.py  b4c5d6e7f8a9_add_row_permission_table.py  b8c9d0e1f2a3_create_core_sys_setting.py  c3d4e5f6a7b9_add_geo_sqllog_tables.py  c4d5e6f7a8b9_fix_pid_fk_constraints.py  c5d6e7f8a9b0_add_column_permission_table.py  d4e5f6a7b8c1_add_map_geo_static_resource_tables.py  d5e6f7a8b9c0_normalize_demo_dashboard_component_data.py  d6e7f8a9b0c1_add_mask_range_to_column_permission.py  e1f2a3b4c5d6_add_core_org_tables.py  e6f7a8b9c0d1_add_xpack_share_access_count.py  e7f8a9b0c1d2_merge_permission_and_menu_heads.py  f1a2b3c4d5e6_add_template_tables.py  f1a2b3c4d5e6_add_user_id_to_sys_variable_value.py  f2a3b4c5d6e7_add_core_role_tables.py  g0h1i2j3k4l5_restructure_admin_menus.py  g1a2b3c4d5e6_add_outer_params_tables.py  h2b3c4d5e6f7_add_linkage_tables.py  i3c4d5e6f7a8_add_watermark_table.py  j4k5l6m7n8o9_add_snapshot_tables.py  k5l6m7n8o9p0_add_share_unique_constraints.py  l6m7n8o9p0q1_seed_official_demo_data.py  m7n8o9p0q1r2_seed_demo_big_screen.py  n1o2p3q4r5s6_seed_admin_console_menu_foundation.py  o2p3q4r5s6t7_add_core_resource_acl_table.py  (+3 more)
core/pydataease-backend/app/: main.py
core/pydataease-backend/app/commands/: init_admin.py
core/pydataease-backend/app/core/: logging.py
core/pydataease-backend/app/dependencies/: auth.py  database.py  mysqlbot_auth.py  permission.py
core/pydataease-backend/app/middleware/: auth.py  bigint_json.py  request_id.py  response_wrapper.py  whitelist.py
core/pydataease-backend/app/models/: __init__.py  api_key.py  auth_provider.py  base.py  chart.py  column_permission.py  custom_geo.py  data_filing.py  dataset.py  dataset_sql_log.py  datasource.py  embed_config.py  engine.py  export.py  font.py  geo.py  link_jump.py  linkage.py  log.py  org.py  org_permission.py  outer_params.py  permission_point.py  permission_whitelist.py  resource_acl.py  role.py  role_permission.py  role_user.py  row_permission.py  share.py  static_resource.py  store.py  sys_setting.py  sys_variable.py  system.py  template.py  user.py  user_auth_link.py  user_org.py  user_permission.py  (+4 more)
core/pydataease-backend/docs/: cutover-runbook.md  release-gate.md  rollback-runbook.md
core/pydataease-backend/scripts/: cleanup_test_data.py  entrypoint.sh  healthcheck.py  migrate_data.py  validate_deployment.py
core/pydataease-backend/tests/: BUGS_FOUND.md  README.md  conftest.py  test_api_contract.py  test_api_key_repo.py  test_appearance_settings.py  test_auth_middleware.py  test_auth_permission_coverage.py  test_auth_permission_routes.py  test_auth_provider.py  test_auth_provider_extended.py  test_big_screen_seed.py  test_chart_data_builder.py  test_chart_routes.py  test_chart_service.py  test_chart_service_coverage.py  test_cleanup.py  test_cors.py  test_custom_geo_repo.py  test_custom_geo_sqllog.py  test_custom_mask_range.py  test_custom_role_flow.py  test_data_filing.py  test_data_permission_service_coverage.py  test_dataset_chart_routes.py  test_dataset_concurrency.py  test_dataset_coverage_boost.py  test_dataset_datasource_integration.py  test_dataset_field_routes.py  test_dataset_integration.py  test_dataset_performance.py  test_dataset_permission.py  test_dataset_routes.py  test_dataset_routes_extended.py  test_dataset_schema_validation.py  test_dataset_service_unit.py  test_dataset_sql_log_routes.py  test_datasource_advanced.py  test_datasource_drivers.py  test_datasource_routes.py  (+84 more)
(+1369 files in other folders)
