[project]
name = "pydataease-backend"
version = "0.1.0"
description = "DataEase Python backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "apscheduler",
    "asyncpg",
    "asyncmy",
    "alembic",
    "openpyxl",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "bcrypt>=4.0",
    "cryptography>=42.0",
    "slowapi",
    "python-json-logger",
    "ldap3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N801",  # class naming (existing code uses PascalCase with suffixes)
    "N802",  # function naming (existing code uses snake_case, some camelCase in routes)
    "N803",  # argument naming (camelCase in API schemas)
    "N806",  # variable naming (camelCase in API schema fields)
    "N815",  # variable naming in schemas (mixedCase)
    "B008",  # function call in default argument (FastAPI Depends pattern)
    "B009",  # get attr with constant (existing pattern)
    "B015",  # useless comparison (existing test patterns)
    "B905",  # zip strict (existing code)
    "I001",  # import sorting (will fix incrementally)
    "TC001", # move stdlib import to type-checking block (existing code)
    "TC002", # move third-party import to type-checking block (existing code)
    "TC003", # move local import to type-checking block (existing code)
    "TC006", # add quotes to cast expression (existing code)
    "UP007", # use X | Y for Optional (existing code uses Union)
    "UP012", # unnecessary encode utf-8 (existing code)
    "UP017", # use timezone.utc (existing code)
    "UP035", # use typing_extensions (existing code)
    "UP037", # remove unnecessary quotes (existing code)
    "UP040", # use TypeAlias (existing code uses assignment)
    "UP045", # use X | Y for Optional in type params (existing code)
    "UP046", # use new generics (existing code)
    "SIM102", # collapsible if (existing code)
    "SIM103", # return condition directly (existing code)
    "SIM105", # try-except-pass to contextlib (existing code)
    "SIM108", # ternary operator (existing code)
    "SIM117", # multiple with (existing code)
    "SIM118", # key in dict (existing code)
    "RUF001", # string contains ambiguous character (existing code)
    "RUF012", # mutable class default (existing code)
    "RUF022", # unsorted __all__ (existing code)
    "RUF100", # unused noqa (existing code)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
